Bug 1882386: Correctly handle empty search string case when inlining String.p.lastIndexOf.  a=diannaS

Original Revision: https://phabricator.services.mozilla.com/D203248

Differential Revision: https://phabricator.services.mozilla.com/D203294